trailr/public/stylesheets/timeline.css
#timeline {
	position:relative;
	border:1px solid gray;
	background-color:#F5F5F5;
	
	padding:0px 0px;
	height:150px;

	-webkit-border-radius:5px;
	-moz-border-radius:5px;

	-moz-border-radius-bottomleft:0px;
	-moz-border-radius-bottomright:0px;	

	-webkit-border-bottom-left-radius:0px;
	-webkit-border-bottom-right-radius:0px;
	
	
}

#timeline .events {
	padding:0px;
	margin:0px;
	margin:-1px;
	position:relative;
	height:166px;
	
	overflow:auto;
	overflow-y:hidden;
}

#timeline .insert {
	display:none;
}

#timeline .info {
	display:none;
}

#timeline .empty {
	
	display:none;
	
	width:75%;
	text-align:center;
	background-color:#454545;
	color:white;
	padding:10px;
	margin:auto;
	left:0px;
	right:0px;	
	position:absolute;
	top:50px;
	
	-webkit-border-radius:5px;
	-moz-border-radius:5px;
	
	opacity:0.75;
	
	
}

#timeline .event {
	text-align:center;
	position:absolute;
	
	width:150px;
	height:150px;

	border:0px solid green;
}

#timeline .meta_callout {
	
	z-index:300;
	
	display:none;
	position:absolute;

	top:0px;
	top:-5px;

	
	width:36px;
	height:20px;
	background-image:url("../images/callout.png");
	opacity:0.95;
}

#timeline .meta {

	display:none;

	z-index:1;

	width:300px;
	/*height:35px;*/
	position:absolute;
	left:13px;
	top:-60px;
	top:0px;
	
	background-color:#454545;
	color:white;
	padding:10px;
	
	margin:auto;
	
	text-align:left;
	font-size:13px;	
	
	opacity:0.95;
	
	-webkit-border-radius:5px;
	-moz-border-radius:5px;
}

#timeline .meta .headline {
	
}

#timeline .meta .source {
	text-decoration:underline;
	margin-top:10px;
	font-size:10px;
}

#timeline .meta .date {
	
}

#timeline .thumbnail .pick_image {
	
	display:none;
	
	cursor:pointer;
	
	position:absolute;
	top:20px;
	left:0px;
	right:0px;	
	margin:auto;
	
	padding:5px;
	
	font-size:11px;
	
	text-decoration:underline;
	
	background-color:#454545;
	color:white;
	width:75%;
	
	-webkit-border-radius:5px;
	-moz-border-radius:5px;
	
	opacity:0.95;
}


#timeline .thumbnail:hover .pick_image {
	display:block;
}

#timeline.noedit .thumbnail:hover .pick_image {
	display:none;
}




#timeline .thumbnail img {
	position:absolute;
	bottom:0px;
	left:0px;
	right:0px;	
	margin:auto;
	
	max-width:75%;
	max-height:100px;
	border:none;
}

#timeline .thumbnail {

	
	vertical-align: bottom;
	text-align:center;
	
	position:relative;
	width:100%;
	
	height:110px;
	margin:auto;
	z-index:0;
}


#timeline .tick {
	
	z-index:0;
	
	position:absolute;
	bottom:15px;
	
	width:50%;
	border-right:2px solid black;
	height:25%;
	height:20px;
	margin-bottom:6px;
}

#timeline .date {
	
	position:absolute;
	width:100%;
	bottom:3px;
	
	text-align:center;
	font-family:Helvetica, Arial, Sans-Serif;
	font-size:12px;
}






#timeline .date .date_edit {
	border:none;
	border-bottom:1px solid #CCC;
	padding:2px 0px 2px 0px;
	
	background-color:transparent;
	font-size:12px;

	text-align:center;
	width:110px;
	
	cursor:pointer;
	
	font-family:Helvetica, Arial, Sans-Serif;
}


#timeline .date .date_edit:focus {
	border:1px solid #CCC;
	background-color:white;
	font-size:12px;
	padding:2px 0px 2px 0px;
	font-family:Helvetica, Arial, Sans-Serif;
}

#timeline .date .date_edit:hover {
	border:1px solid #CCC;
	background-color:white;
	font-size:12px;
	padding:2px 0px 2px 0px;
	font-family:Helvetica, Arial, Sans-Serif;
}


#timeline .date .date_edit:hover {
	border:1px solid #CCC;
	background-color:white;
	font-size:12px;
	padding:2px 0px;
	font-family:Helvetica, Arial, Sans-Serif;
}





#timeline.noedit .date .date_edit {
	cursor: default;
}

#timeline.noedit .date .date_edit:focus {
	border:none;
	border-bottom:1px solid #CCC;
	padding:2px 0px 2px 0px;
	background-color:transparent;
	
}

#timeline.noedit .date .date_edit:hover {
	border:none;
	border-bottom:1px solid #CCC;
	padding:2px 0px 2px 0px;
	background-color:transparent;
	
}


#timeline.noedit .date .date_edit:hover {
	border:none;
	border-bottom:1px solid #CCC;
	padding:2px 0px 2px 0px;
	background-color:transparent;
	
}
















#timeline #scale {
	border-bottom:2px solid black;
	position:absolute;
	bottom:30px;
	width:100%;
}

/*
#timeline table, td, th
{
	width:100%;
    border-color: black;
    border-style: solid;
}
*/

#timeline .close {
	
	font-size:11px;
	position:absolute;
	left:0px;
	bottom:-8px;
	z-index:50;
	height:26px;
	width:26px;
	background-color:none;
	cursor:pointer;
	//background-image:url("../images/close.png");
	
}

#timeline.noedit .close {
	display:none;
}


#timeline #image_picker_cover {
	height:100%;
	width:100%;
	position:fixed;
	top:0px;
	left:0px;
	z-index:100;
	background-color:black;
	opacity:0.5;
	display:none;	
}


#timeline #image_picker { 
	
	display:none;
	
	width:580px;
	height:380px;
	
	padding:10px;
	
	margin:auto;
	left:0px;
	right:0px;
	position:fixed;
	bottom:100px;
	
	background-color:#F5F5F5;
	z-index:100;
	
	
	-webkit-border-radius:5px;
	-moz-border-radius:5px;
	
}


#timeline #image_picker .close {
	float:right;
	position:absolute;
	
	left:auto;
	right:-10px;
	top:-10px;
	
	height:26px;
	width:26px;
	background-color:none;
	cursor:pointer;
	background-image:url("../images/close.png");
	
}

#image_picker img {	
	width:75px;
	max-height:100px;
	border:none;

}

#image_picker ul {
	list-style: none;
	height:200px;
	overflow:auto;
	padding-left:0px;
}

#image_picker ul li {
	float:left;
	padding:15px 15px;
	cursor:pointer;
	min-height:100px;
}

#image_picker ul li:hover {
	background-color:#C7C7C7;
}

#image_picker h3 {
	margin-bottom:15px;
}

